package baseline;

record EmployeeData(String lastName, String firstName, double salary) {
    //Simply store three variables: A string named firstName, a string named lastName, and a double named salary.
}
