@startuml
Solution42 o-- ReadAndDecodeFile
Solution42 o-- OutputToFile
AccessFile <|-- ReadAndDecodeFile
AccessFile <|-- OutputToFile
AccessFile o-- EmployeeData
Solution42 o-- EmployeeData

class Solution42 {
-ArrayList<EmployeeData> employeeList
-ReadAndDecodeFile input
-OutputToFile output
+static void main(String[] args)
}

class ReadAndDecodeFile {
-static final String DEFAULT_INPUT_PATH
+readData()
+static EmployeeData decodeData(String encodedData)
}

class OutputToFile {
-static final String DEFAULT_OUTPUT_PATH
+writeData()
}

class AccessFile {
#Path pathToFile
#ArrayList<EmployeeData> inEmployeeList
}

class EmployeeData {
+String firstName
+String lastName
+double salary
}
note bottom: This is actually a record, but records don't exist in PlantUML.

@enduml